--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/backend
 
 # misc
 .DS_Store
@@ -18,7 +19,6 @@
 .env.test.local
 .env.production.local
 .env
-axios-instance.js
 
 npm-debug.log*
 yarn-debug.log*
